--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,3 +8,5 @@ $color7: #dedee4;
 $color8: #ca822f;
 $color9: #f9f9f9;
 $color10: #dc3545;
+$color11: rgba(110, 112, 119, 0.05);
+$color12: rgba(110, 112, 119, 0.1);
