--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
   color: $color3;
   font-size: 16px;
   transition: 0.4s ease;
+  scroll-behavior: smooth;
 }
 
 .auth-container {
@@ -204,4 +205,296 @@
       }
     }
   }
+}
+
+.project-creation-container {
+  max-width: 1284px;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .user-info {
+      display: flex;
+      align-items: center;
+
+      .img-placeholder {
+        width: 40px;
+        height: 40px;
+        background-color: $color7;
+        border-radius: 50%;
+        margin-right: 8px;
+        text-align: center;
+        line-height: 2.75;
+        font-weight: bold;
+        font-size: 14px;
+      }
+    }
+  }
+
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+
+  .main {
+    display: flex;
+    margin-top: 40px;
+    border-radius: 10px;
+    overflow: hidden;
+    min-height: 732px;
+
+    .left {
+      width: 400px;
+      padding: 30px;
+      background-color: $color12;
+      flex-shrink: 0;
+
+      @media screen and (max-width: 991px) {
+        width: 230px;
+      }
+
+      .steps {
+        padding-bottom: 50px;
+        border-bottom: 1px solid $color7;
+
+        .step {
+          margin-bottom: 50px;
+          display: flex;
+          align-items: center;
+
+          .img {
+            position: relative;
+            background-color: $color7;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 20px;
+            border: 1px solid transparent;
+
+            &::after {
+              content: "";
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%);
+              top: calc(100% + 10px);
+              height: 30px;
+              width: 1px;
+              background-color: $color7;
+            }
+
+            img {
+              filter: invert(41%) sepia(2%) saturate(1910%) hue-rotate(189deg)
+                brightness(101%) contrast(74%);
+            }
+          }
+
+          &:last-child {
+            margin-bottom: 0;
+
+            .img {
+              &::after {
+                display: none;
+              }
+            }
+          }
+
+          .text {
+            font-weight: 600;
+            color: $color6;
+          }
+
+          &.active {
+            .img {
+              background-color: $color1;
+
+              img {
+                filter: invert(99%) sepia(0%) saturate(348%) hue-rotate(268deg)
+                  brightness(114%) contrast(100%);
+              }
+            }
+
+            .text {
+              color: $color3;
+            }
+          }
+
+          &.done {
+            .img {
+              background-color: transparent;
+              border-color: $color1;
+
+              img {
+                filter: invert(76%) sepia(17%) saturate(4174%)
+                  hue-rotate(335deg) brightness(96%) contrast(89%);
+              }
+            }
+
+            .text {
+              color: $color1;
+            }
+          }
+        }
+      }
+
+      .tip {
+        padding-top: 30px;
+
+        a {
+          margin-top: 10px;
+          font-weight: 600;
+        }
+      }
+    }
+
+    .right {
+      flex-grow: 1;
+      padding: 50px;
+      background-color: $color9;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .btn {
+        margin-top: 40px;
+      }
+
+      .sub-section {
+        margin-bottom: 50px;
+
+        &:last-of-type {
+          margin-bottom: 0px;
+        }
+
+        h3 {
+          margin-bottom: 30px;
+        }
+      }
+
+      .tools {
+        .tools-main {
+          border: 1px solid $color7;
+          border-radius: 5px;
+          padding-bottom: 10px;
+          margin-top: 10px;
+
+          .tools-main-title,
+          .tools-section-title {
+            padding-top: 20px;
+            padding-bottom: 20px;
+          }
+
+          .tools-main-title {
+            background-color: $color12;
+            padding-left: 20px;
+          }
+
+          .tools-section-title,
+          .tools-section-item {
+            padding-left: 46px;
+            padding-right: 46px;
+          }
+
+          .tools-section-title {
+            background-color: $color11;
+          }
+
+          .tools-section-item {
+            padding-top: 10px;
+            padding-bottom: 10px;
+          }
+        }
+      }
+
+      .directory {
+        .info {
+          background-color: $color11;
+          padding: 12px 16px;
+          border-radius: 5px;
+          margin-top: 24px;
+          margin-bottom: 30px;
+        }
+
+        .table-container {
+          border: 1px solid $color7;
+          border-radius: 10px;
+        }
+
+        table {
+          width: 100%;
+          border-collapse: collapse;
+
+          thead {
+            background-color: $color11;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+          }
+
+          tr {
+            th,
+            td {
+              padding: 12px;
+            }
+
+            th {
+              text-align: left;
+              font-size: 11px;
+
+              &:nth-child(1) {
+                min-width: 135px;
+              }
+
+              &:nth-child(2) {
+                min-width: 82px;
+              }
+
+              &:nth-child(3) {
+                min-width: 142px;
+              }
+
+              &:nth-child(4) {
+                min-width: 90px;
+              }
+
+              &:nth-child(5) {
+                min-width: 62px;
+              }
+            }
+
+            td {
+              color: $color6;
+              font-size: 10px;
+
+              &:last-child {
+                text-align: right;
+                padding-left: 24px;
+                padding-right: 24px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  background-color: $color9;
+  border-top: 1px solid $color7;
+  padding: 20px;
+  text-align: center;
+  margin-top: 50px;
+  color: $color6;
+  font-size: 14px;
 }
