adds all project completion pages

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,4 +9,6 @@ $color8: #ca822f;
 $color9: #f9f9f9;
 $color10: #dc3545;
 $color11: rgba(110, 112, 119, 0.05);
-$color12: rgba(110, 112, 119, 0.1);
+$color12: rgba(110, 112, 119, 0.01);
+$color13: rgba(110, 112, 119, 0.1);
+$color14: rgba($color1, 0.05);
