--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -81,10 +81,6 @@
       margin-right: auto;
       border-radius: 16px;
       backdrop-filter: blur(8px);
-      // height: 100%;
-      // display: flex;
-      // flex-direction: column;
-      // align-items: center;
 
       @media screen and (max-width: 991px) {
         padding-left: 40px;
@@ -246,17 +242,16 @@
   }
 
   .main {
-    display: flex;
     margin-top: 40px;
     border-radius: 10px;
-    overflow: hidden;
-    min-height: 732px;
+    background-color: $color12;
 
     .left {
       width: 400px;
+      height: 100%;
       padding: 30px;
-      background-color: $color12;
       flex-shrink: 0;
+      float: left;
 
       @media screen and (max-width: 991px) {
         width: 230px;
@@ -300,7 +295,7 @@
             }
           }
 
-          &:last-child {
+          &:last-of-type {
             margin-bottom: 0;
 
             .img {
@@ -365,6 +360,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      min-height: 732px;
 
       .btn {
         margin-top: 40px;
@@ -396,7 +392,7 @@
           }
 
           .tools-main-title {
-            background-color: $color12;
+            background-color: $color13;
             padding-left: 20px;
           }
 
@@ -413,6 +409,15 @@
           .tools-section-item {
             padding-top: 10px;
             padding-bottom: 10px;
+
+            &,
+            * {
+              cursor: grab;
+
+              &:active {
+                cursor: grabbing;
+              }
+            }
           }
         }
       }
@@ -429,11 +434,15 @@
         .table-container {
           border: 1px solid $color7;
           border-radius: 10px;
+          width: 100%;
         }
 
         table {
           width: 100%;
           border-collapse: collapse;
+          min-width: 710px;
+          word-break: break-word;
+          table-layout: fixed;
 
           thead {
             background-color: $color11;
@@ -451,25 +460,25 @@
               text-align: left;
               font-size: 11px;
 
-              &:nth-child(1) {
-                min-width: 135px;
-              }
+              // &:nth-child(1) {
+              //   min-width: 135px;
+              // }
 
-              &:nth-child(2) {
-                min-width: 82px;
-              }
+              // &:nth-child(2) {
+              //   min-width: 82px;
+              // }
 
-              &:nth-child(3) {
-                min-width: 142px;
-              }
+              // &:nth-child(3) {
+              //   min-width: 142px;
+              // }
 
-              &:nth-child(4) {
-                min-width: 90px;
-              }
+              // &:nth-child(4) {
+              //   min-width: 90px;
+              // }
 
-              &:nth-child(5) {
-                min-width: 62px;
-              }
+              // &:nth-child(5) {
+              //   min-width: 62px;
+              // }
             }
 
             td {
