--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -250,6 +250,12 @@ textarea {
     width: 26px;
   }
 
+  .calender {
+    position: absolute;
+    right: 16px;
+    top: calc(38px);
+  }
+
   label {
     display: flex;
     align-items: center;
@@ -355,6 +361,7 @@ textarea {
 
     &:checked ~ .checkmark {
       background-color: $color1;
+      border-color: transparent;
 
       &::after {
         display: block;
@@ -383,6 +390,8 @@ textarea {
 }
 
 .custom-select-container {
+  position: relative;
+
   .selected-text {
     padding: 14px 16px;
     width: 100%;
@@ -427,6 +436,7 @@ textarea {
 
   .select-options {
     position: absolute;
+    top: 50px;
     margin-top: 1px;
     width: 100%;
     border-radius: 4px;
@@ -560,5 +570,82 @@ textarea {
 
 .table-container {
   overflow-x: auto;
-  // @extend %horizontal-scrollbar;
+  @extend %horizontal-scrollbar;
+}
+
+.dropdown {
+  position: relative;
+  cursor: pointer;
+  padding-right: 24px;
+
+  .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+  }
+
+  .dropdown-items {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    padding-top: 6px;
+
+    .dropdown-items-main {
+      background-color: #fff;
+      border-radius: 5px;
+      border: 1px solid $color7;
+
+      li {
+        a {
+          padding: 12px 16px;
+          display: block;
+          color: $color3;
+
+          &:hover {
+            text-decoration: none;
+            background-color: $color4;
+            color: $color1;
+          }
+        }
+      }
+    }
+  }
+
+  &:hover {
+    .arrow {
+      transform: translateY(-50%) rotate(-180deg);
+    }
+
+    .dropdown-items {
+      opacity: 1;
+      pointer-events: all;
+    }
+  }
+}
+
+.react-datepicker__header {
+  background-color: $color14;
+}
+
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+  background-color: $color1;
+
+  &:hover {
+    background-color: $color8;
+  }
+}
+
+.react-datepicker__triangle {
+  transform: translate(-50%, 0) !important;
+  left: 50% !important;
+}
+
+.react-datepicker__current-month {
+  color: $color1;
 }
