adds navigation to the left

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -265,6 +265,7 @@
           margin-bottom: 50px;
           display: flex;
           align-items: center;
+          cursor: pointer;
 
           .img {
             position: relative;
