adds dashboard pages

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -12,3 +12,9 @@ $color11: rgba(110, 112, 119, 0.05);
 $color12: rgba(110, 112, 119, 0.01);
 $color13: rgba(110, 112, 119, 0.1);
 $color14: rgba($color1, 0.05);
+$color15: #fdf4eb;
+$color16: rgba($color1, 0.2);
+$color17: #ebebf0;
+$color18: #e3fbe3;
+$color19: #36b933;
+$color20: #f84949;
